added new content

--- a/eddiequotez.html
+++ b/eddiequotez.html
@@ -24,7 +24,7 @@
 
 	<section class="top">
 		<div class="nav-logo nav-logo-gd">
-			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="index.html"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
@@ -42,7 +42,7 @@
 	</section>
 	<section id="portrait">
 	<div class="gd">
-			<div class="mySlides-gd">
+		<div class="mySlides-gd">
 			<div class="recent-gd">
 			</div>
 			<img src="img/eddieq2017-6.png">
