--- a/graphic-design.html
+++ b/graphic-design.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU GRAPHIC DESIGN</title>
+	<title>KATIE SITU · DESIGN</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -24,7 +24,7 @@
 
 	<section class="top">
 		<div class="nav-logo nav-logo-gd">
-			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="index.html"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
