--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU</title>
+	<title>kaesitu ·  music / home</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -24,19 +24,20 @@
 
 	<section class="top">
 		<div class="nav-logo">
-			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="index.html"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#home">M U S I C</a></li>
+				<li class="ease-all"><a href="index.html">music</a></li>
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="#portrait">M I S C</a></li>
-				<li class="ease-all"><a href="#about">B I O</a></li>
-				<li class="ease-all"><a href="graphic-design.html">D E S I G N</a></li>
-				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
+				<li class="ease-all"><a href="people.html">people</a></li>
+				<li class="ease-all"><a href="places.html">places</a></li>
+				<li class="ease-all"><a href="bio.html">bio</a></li>
+				<li class="ease-all"><a href="design.html">design</a></li>
+				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
 			</ul>	
 		</nav>
 	</section>
@@ -48,7 +49,13 @@
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
-					<img src="img/img-inshar-5.png" alt="eben">
+					<img src="img/eddieq2017-34.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-36.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-6.png" alt="eben">
@@ -66,16 +73,37 @@
 					<img src="img/img-iggy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
+					<img src="img/eddieq2017-6.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/morris-2.png" alt="eben">
+					<img src="img/morris-9.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/yussobluesfest-15.png" alt="eben">
+					<img src="img/eddieq2017-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-8.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-37.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-francesco-yates-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-20.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-19.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jrdn-1-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-17.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-31.png" alt="eben">
@@ -87,7 +115,13 @@
 					<img src="img/img-teganandsara.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-inshar-5-2.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/yussobluesfest-35.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-20.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eddie-5.png" alt="eben">
@@ -96,10 +130,16 @@
 					<img src="img/yussobluesfest-24.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-shawn-hook-4.png" alt="eben">
+					<img src="img/yussobluesfest-15.png" alt="eben">
 				</li>
-			<li>
+				<li>
 					<img src="img/img-airdubai.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-35.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-25.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-1.png" alt="eben">
@@ -114,10 +154,25 @@
 					<img src="img/img-maydayparade.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/yussobluesfest-25.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/weday-dance-fingers.png" alt="inshar">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-37.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-38.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-24.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-16.png" alt="eben">
 				</li>
 			</ul>
 		</div>
@@ -239,7 +294,7 @@
 			</ul>
 		</div>
 	</section>-->
-	<section id="portrait">
+	<!--<section id="portrait">
 	<div class="prevnext">
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   			<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -326,7 +381,7 @@
 			<img src="img/img-hodan-3.png">
 		</div>
 	</div>
-	</section>
+	</section>-->
 	<!--<section id="recent">
 	<div class="prevnext">
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -729,7 +784,7 @@ span.onclick = function() {
 </script>
 		</div>
 	</section>
-	<section id="about" class="about grid">
+	<!--<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
 		<h1>hello,</h1>
 		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
@@ -737,9 +792,13 @@ span.onclick = function() {
 		<p>please check out my graphic design work · it's not much right now, but I got a few projects up!</p>
 		
 		<p>music · travel · art</p>
+		<h1>KATIE SITU</h1>
+		<p>(b. 1993, ottawa, canada)</p>
+		<h1>education:</h1>
+		<p>OCAD in Graphic Design from Algonquin College, School of Media & Design</p>
 		<img src="img/profilephoto.png" alt="katie-situ">
 	</div>
-	</section>
+	</section>-->
 	
 	<footer id="contact" class="contact">
 		<div>
