--- a/places.html
+++ b/places.html
@@ -54,19 +54,22 @@
 					<img src="img/img-ferry.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hongkong-5.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-china-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/mercury-1.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-jellyfish.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-hongkong-5.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-farm.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-trees2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-trees.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-china-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-niagara.png" alt="eben">
