adjusted photos on yusso

--- a/eddiequotez.html
+++ b/eddiequotez.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU</title>
+	<title>katiesitu · eddiequotez</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -21,9 +21,8 @@
 </head>
 
 <body>
-
 	<section class="top">
-		<div class="nav-logo nav-logo-gd">
+		<div class="nav-logo">
 			<a class="small-logo" href="index.html"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
@@ -31,8 +30,13 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="index.html">H O M E</a></li>
-				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
+				<li class="ease-all"><a href="index.html">music</a></li>
+				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
+				<li class="ease-all"><a href="people.html">people</a></li>
+				<li class="ease-all"><a href="places.html">places</a></li>
+				<li class="ease-all"><a href="bio.html">bio</a></li>
+				<li class="ease-all"><a href="design.html">design</a></li>
+				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
 			</ul>	
 		</nav>
 	</section>
@@ -40,173 +44,162 @@
 	<section id="home" class="home">
 		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
-	<section id="portrait">
-	<div class="gd">
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-6.png">
+	<section id="portfolio" class="portfolio grid">
+			<div class="unit unit-s-1">
+  			<ul class="photos">
+				<li>
+					<img src="img/eddieq2017-6.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-28.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-33.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-26.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-15.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-25.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-21.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-22.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-16.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-27.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-17.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-14.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-29.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-32.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-30.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-10.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-24.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-31.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-18.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-11.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-23.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-12.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-13.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-9.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-20.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-8.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-19.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-7.png" alt="eben">
+				</li>
+			</ul>
 		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-28.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-33.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-26.png">
-		</div><div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-15.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-25.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-21.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-22.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-16.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-27.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-17.png">
-		</div><div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-14.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-29.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-1.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-32.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-3.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-30.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-10.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-24.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-31.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-18.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-11.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-23.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-12.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-13.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-5.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-2.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-9.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-4.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-20.png">
-		</div>
-			<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-8.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-19.png">
-		</div>
-		<div class="mySlides-gd">
-			<div class="recent-gd">
-			</div>
-			<img src="img/eddieq2017-7.png">
-		</div>
-	</div>
 	</section>
+	<!--<section id="graphicdesign">
+		<div class="graphicdesign">
+			<img id="myImg" src="img/morris-2.png" alt="Trolltunga, Norway">
+	-->
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+		</div>
+	</section>
+	<!--<section id="about" class="about grid">
+	<div class="intro unit unit-s-1">
+		<h1>hello,</h1>
+		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
+		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
+		<p>please check out my graphic design work · it's not much right now, but I got a few projects up!</p>
+		
+		<p>music · travel · art</p>
+		<h1>KATIE SITU</h1>
+		<p>(b. 1993, ottawa, canada)</p>
+		<h1>education:</h1>
+		<p>OCAD in Graphic Design from Algonquin College, School of Media & Design</p>
+		<img src="img/profilephoto.png" alt="katie-situ">
+	</div>
+	</section>-->
 	
 	<footer id="contact" class="contact">
 		<div>
@@ -224,7 +217,7 @@
 		</div>
 			<p>©2017 Katie Situ</p> 
 	</footer>
-
+	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/jquery.scrollTo.min.js"></script>
 	<script src="js/jquery.localScroll.min.js"></script>
