--- a/yusso.html
+++ b/yusso.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU</title>
+	<title>katiesitu · yusso</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -21,18 +21,22 @@
 </head>
 
 <body>
-
 	<section class="top">
-		<div class="nav-logo nav-logo-gd">
-			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
+		<div class="nav-logo">
+			<a class="small-logo" href="index.html"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="index.html">H O M E</a></li>
-				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
+				<li class="ease-all"><a href="index.html">music</a></li>
+				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
+				<li class="ease-all"><a href="people.html">people</a></li>
+				<li class="ease-all"><a href="places.html">places</a></li>
+				<li class="ease-all"><a href="bio.html">bio</a></li>
+				<li class="ease-all"><a href="design.html">design</a></li>
+				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
 			</ul>	
 		</nav>
 	</section>
@@ -40,372 +44,204 @@
 	<section id="home" class="home">
 		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
-	<section id="recent">
-	<div class="prevnext">
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+	<section id="portfolio" class="portfolio grid">
+		<div class="unit unit-s-1">
+  			<ul class="photos">
+				<li>
+					<img src="img/morris-8.png">				
+				</li>
+				<li>
+    				<img src="img/morris-2.png">				
+				</li>
+				<li>
+    				<img src="img/morris-1.png">				
+				</li>
+				<li>
+    				<img src="img/morris-4.png">				
+				</li>
+				<li>
+    				<img src="img/morris-7.png">				
+				</li>
+				<li>
+    				<img src="img/morris-5.png">				
+				</li>
+				<li>
+    				<img src="img/morris-6.png">				
+				</li>
+				<li>
+    				<img src="img/morris-10.png">				
+				</li>
+				<li>
+    				<img src="img/morris-9.png">				
+				</li>
+				<li>
+    				<img src="img/morris-3.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-2.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-1.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-3.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-4.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-5.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-6.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-7.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-8.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-9.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-10.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-11.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-12.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-13.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-14.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-15.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-16.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-17.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-18.png">				
+				</li>
+				<li>
+					<img src="img/yussobluesfest-33.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-34.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-35.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-36.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-28.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-19.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-20.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-27.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-22.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-23.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-24.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-25.png">				
+				</li>		
+				<li>
+    				<img src="img/yussobluesfest-21.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-26.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-37.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-29.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-31.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-30.png">				
+				</li>
+				<li>
+    				<img src="img/yussobluesfest-32.png">				
+				</li>
+			</ul>
 		</div>
-	<div class="slideshow-container">
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-   			<div class="text">1 / 47</div>
-			<img src="img/morris-8.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">2 / 47</div>
-    		<img src="img/morris-2.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">3 / 47</div>
-    		<img src="img/morris-1.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">4 / 47</div>
-    		<img src="img/morris-4.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">5 / 47</div>
-    		<img src="img/morris-7.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">6 / 47</div>
-    		<img src="img/morris-5.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">7 / 47</div>
-    		<img src="img/morris-6.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">8 / 47</div>
-    		<img src="img/morris-10.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">9 / 47</div>
-    		<img src="img/morris-9.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>M O R R I S &nbsp; O G B O W U</h1>
-			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
-			</div>
-			<div class="text">10 / 47</div>
-    		<img src="img/morris-3.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">11 / 47</div>
-    		<img src="img/yussobluesfest-2.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">12 / 47</div>
-    		<img src="img/yussobluesfest-1.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">13 / 47</div>
-    		<img src="img/yussobluesfest-3.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">14 / 47</div>
-    		<img src="img/yussobluesfest-4.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">15 / 47</div>
-    		<img src="img/yussobluesfest-5.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">16 / 47</div>
-    		<img src="img/yussobluesfest-6.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">17 / 47</div>
-    		<img src="img/yussobluesfest-7.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">18 / 47</div>
-    		<img src="img/yussobluesfest-8.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">19 / 47</div>
-    		<img src="img/yussobluesfest-9.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">20 / 47</div>
-    		<img src="img/yussobluesfest-10.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">21 / 47</div>
-    		<img src="img/yussobluesfest-11.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">22 / 47</div>
-    		<img src="img/yussobluesfest-12.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">23 / 47</div>
-    		<img src="img/yussobluesfest-13.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">24 / 47</div>
-    		<img src="img/yussobluesfest-14.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">25 / 47</div>
-    		<img src="img/yussobluesfest-15.png">
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">26 / 47</div>
-    		<img src="img/yussobluesfest-16.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">27 / 47</div>
-    		<img src="img/yussobluesfest-17.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">28 / 47</div>
-    		<img src="img/yussobluesfest-18.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">29 / 47</div>
-    		<img src="img/yussobluesfest-33.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">30 / 47</div>
-    		<img src="img/yussobluesfest-34.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">31 / 47</div>
-    		<img src="img/yussobluesfest-35.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">32 / 47</div>
-    		<img src="img/yussobluesfest-36.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">33 / 47</div>
-    		<img src="img/yussobluesfest-28.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">34 / 47</div>
-    		<img src="img/yussobluesfest-19.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">35 / 47</div>
-    		<img src="img/yussobluesfest-20.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">36 / 47</div>
-    		<img src="img/yussobluesfest-27.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">37 / 47</div>
-    		<img src="img/yussobluesfest-22.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">38 / 47</div>
-    		<img src="img/yussobluesfest-23.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">39 / 47</div>
-    		<img src="img/yussobluesfest-24.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">40 / 47</div>
-    		<img src="img/yussobluesfest-25.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">41 / 47</div>
-    		<img src="img/yussobluesfest-21.png">
-		</div>
-		</div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">42 / 47</div>
-    		<img src="img/yussobluesfest-26.png">
-		</div></div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">43 / 47</div>
-    		<img src="img/yussobluesfest-37.png">
-		</div></div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">44 / 47</div>
-    		<img src="img/yussobluesfest-29.png">
-		</div></div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">45 / 47</div>
-    		<img src="img/yussobluesfest-31.png">
-		</div></div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">46 / 47</div>
-    		<img src="img/yussobluesfest-30.png">
-		</div></div><div class="mySlides fade">
-			<div class="recent">
-			<h1>Y U S S O</h1>
-			<h1>B L U E S F E S T / 2 0 1 6</h1>
-			</div>
-			<div class="text">47 / 47</div>
-    		<img src="img/yussobluesfest-32.png">
-		</div>
-	</div>
 	</section>
+	<!--<section id="graphicdesign">
+		<div class="graphicdesign">
+			<img id="myImg" src="img/morris-2.png" alt="Trolltunga, Norway">
+	-->
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+		</div>
+	</section>
+	<!--<section id="about" class="about grid">
+	<div class="intro unit unit-s-1">
+		<h1>hello,</h1>
+		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
+		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
+		<p>please check out my graphic design work · it's not much right now, but I got a few projects up!</p>
+		
+		<p>music · travel · art</p>
+		<h1>KATIE SITU</h1>
+		<p>(b. 1993, ottawa, canada)</p>
+		<h1>education:</h1>
+		<p>OCAD in Graphic Design from Algonquin College, School of Media & Design</p>
+		<img src="img/profilephoto.png" alt="katie-situ">
+	</div>
+	</section>-->
 	
 	<footer id="contact" class="contact">
 		<div>
@@ -423,7 +259,7 @@
 		</div>
 			<p>©2017 Katie Situ</p> 
 	</footer>
-
+	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/jquery.scrollTo.min.js"></script>
 	<script src="js/jquery.localScroll.min.js"></script>
