adjusted album pages

--- a/morris.html
+++ b/morris.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>katiesitu · yusso</title>
+	<title>katiesitu · morris</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -48,115 +48,34 @@
 		<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
-    				<img src="img/yussobluesfest-19.png">				
+					<img src="img/morris-8.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-24.png">				
+    				<img src="img/morris-2.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-1.png">				
+    				<img src="img/morris-1.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-3.png">				
+    				<img src="img/morris-4.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-4.png">				
+    				<img src="img/morris-7.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-6.png">				
+    				<img src="img/morris-5.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-5.png">				
+    				<img src="img/morris-6.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-8.png">				
+    				<img src="img/morris-10.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-10.png">				
+    				<img src="img/morris-9.png">				
 				</li>
 				<li>
-    				<img src="img/yussobluesfest-11.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-20.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-12.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-7.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-14.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-15.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-16.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-17.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-18.png">				
-				</li>
-				<li>
-					<img src="img/yussobluesfest-33.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-34.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-35.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-36.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-28.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-2.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-32.png">				
-				</li>	
-				<li>
-    				<img src="img/yussobluesfest-22.png">				
-				</li>	
-				<li>
-    				<img src="img/yussobluesfest-27.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-9.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-23.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-13.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-25.png">				
-				</li>		
-				<li>
-    				<img src="img/yussobluesfest-21.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-26.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-37.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-29.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-31.png">				
-				</li>
-				<li>
-    				<img src="img/yussobluesfest-30.png">				
+    				<img src="img/morris-3.png">				
 				</li>
 			</ul>
 		</div>
