--- a/people.html
+++ b/people.html
@@ -31,7 +31,7 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="index.html">music</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/">music</a></li>
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
 				<li class="ease-all"><a href="people.html">people</a></li>
 				<li class="ease-all"><a href="places.html">places</a></li>
